<resources>
    <string name="app_name">snakeGame</string>
    <string name="game_over_play_again">Game Over ! Play Again</string>
    <string name="resume_game">Resume Game</string>
    <string name="score">score</string>
    <string name="resume_game1">Resume Game</string>
    <string name="game_over_play_again1">Game Over ! Play Again</string>
    <string name="up">UP</string>
    <string name="left">LEFT</string>
    <string name="new_game">New Game</string>
    <string name="pause">pause</string>
    <string name="right">RIGHT</string>
    <string name="down">DOWN</string>
    <string name="game_over_play_again2">Game Over ! Play Again</string>
</resources>