<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/score2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lilu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="390dp"
        android:layout_height="450dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="120dp"
            android:background="@color/black"
            android:text="@string/game_over_play_again2"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck,RelativeOverlap,VisualLintOverlap"></Button>


        <Button
            android:id="@+id/new_game"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="130dp"
            android:background="@color/purple_700"
            android:text="@string/new_game"
            tools:ignore="VisualLintOverlap">

        </Button>

        <Button
            android:id="@+id/resume"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_game"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="130dp"
            android:background="@color/purple_700"
            android:text="@string/resume_game1"
            android:textAlignment="center"
            tools:ignore="TextSizeCheck,VisualLintOverlap">

        </Button>

        <Button
            android:id="@+id/playagain"
            android:layout_width="230dp"
            android:layout_height="80dp"
            android:layout_below="@id/resume"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="80dp"

            android:background="@color/red"
            android:gravity="center"
            android:text="@string/game_over_play_again1"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,VisualLintOverlap">

        </Button>

        <RelativeLayout
            android:id="@+id/board"
            android:layout_width="380dp"
            android:layout_height="450dp"
            android:layout_marginStart="5dp"
            android:background="@color/black"
            android:gravity="center"
            tools:ignore="MissingConstraints">


        </RelativeLayout>


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/lilu"
        android:layout_width="250dp"
        android:layout_height="210dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center">

            <Button
                android:id="@+id/up"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:gravity="center"
                android:text="@string/up" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center">

            <Button
                android:id="@+id/left"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/left"
                ></Button>

            <Button
                android:id="@+id/pause"

                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pause"
                tools:ignore="TextSizeCheck"></Button>

            <Button
                android:id="@+id/right"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/right"
                ></Button>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            tools:ignore="VisualLintBounds">

            <Button
                android:id="@+id/down"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/down"></Button>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>